# ibkr-cli-fork

./: .clawhubignore  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: smoke_preview.sh
skills/ibkr-cli/: SKILL.md
skills/ibkr-cli/agents/: openai.yaml
skills/ibkr-cli/references/: account.md  flex-queries.md  market-data.md  setup.md  trading.md
src/ibkr_cli/: __main__.py  app.py  config.py  flex_service.py  gateway_service.py  health_service.py  ib_service.py  networking.py  version_check.py  watch_service.py
tests/: test_cli.py  test_config.py  test_gateway_service.py  test_health_service.py  test_renderers.py  test_watch_service.py
