[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-cli"
version = "0.7.1"
description = "A local-first CLI for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "fatwang2"},
]
dependencies = [
  "ib_async>=2.1,<3",
  "platformdirs>=4.2,<5",
  "pydantic>=2.6,<3",
  "rich>=13.7,<14",
  "tomli>=2.0,<3; python_version < '3.11'",
  "typer>=0.12,<1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/uu-z/ibkr-cli-fork"
Repository = "https://github.com/uu-z/ibkr-cli-fork"
Issues = "https://github.com/uu-z/ibkr-cli-fork/issues"

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
ibkr = "ibkr_cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
